fixed overflow-x issue on safari

--- a/style.css
+++ b/style.css
@@ -22,6 +22,9 @@ body {
   padding: 0;
   height: 100vh;
   font-family: 'Overpass', sans-serif;
+}
+
+main {
   overflow-x: hidden;
 }
 
